@@ -6,6 +6,7 @@
 - Bugfixes for the tk::GraphDot widget.
 - Added new Display::wait_events() method for polling display for incoming events.
 - Updated rendering of tk::LedMeterChannel widget.
+- Fixed NULL dereference when linking styles in the schema.
 
 === 0.5.1 ===
 * Updated code to match lltl library headers.
